// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SayMsgForm render should render 1`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "name": "Ok",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  headerClass="send_msg"
  title="Send message"
>
  <TypeList
    __className=""
    initialType={
      Object {
        "component": [Function],
        "description": "Send the contact a message",
        "form": [Function],
        "localization": [Function],
        "localizeableKeys": Array [
          "text",
          "quick_replies",
          "templating.variables",
        ],
        "massageForDisplay": [Function],
        "name": "Send message",
        "type": "send_msg",
      }
    }
    nodeSettings={
      Object {
        "originalAction": Object {
          "all_urns": false,
          "text": "Hey!",
          "type": "send_msg",
          "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
        },
        "originalNode": Object {
          "inboundConnections": Object {},
          "node": Object {
            "actions": Array [
              Object {
                "all_urns": false,
                "text": "Hey!",
                "type": "send_msg",
                "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
              },
            ],
            "exits": Array [
              Object {
                "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
              },
            ],
            "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
          },
          "ui": Object {
            "position": Object {
              "left": 0,
              "top": 0,
            },
            "type": "execute_actions",
          },
        },
      }
    }
    onChange={[MockFunction]}
  />
  <TextInputElement
    autocomplete={true}
    entry={
      Object {
        "value": "",
      }
    }
    focus={true}
    name="Message"
    onChange={[Function]}
    showLabel={false}
    textarea={true}
  />
  <UploadButton
    endpoint="/assets/attachments.json"
    icon="fe-mic"
    onUploadChanged={[Function]}
    removeText="Remove Recording"
    uploadText="Upload Recording"
    url=""
  />
</Dialog>
`;

exports[`SayMsgForm updates should allow switching from router 1`] = `
Array [
  Object {
    "audio_url": "",
    "text": "What is your favorite color?",
    "type": "say_msg",
    "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
  },
]
`;

exports[`SayMsgForm updates should save changes 1`] = `
Object {
  "audio": Object {
    "value": "",
  },
  "message": Object {
    "validationFailures": Array [],
    "value": "What is your favorite color?",
  },
  "valid": true,
}
`;

exports[`SayMsgForm updates should save changes 2`] = `
Array [
  Object {
    "audio_url": "",
    "text": "What is your favorite color?",
    "type": "say_msg",
    "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
  },
]
`;
